[package]
name = "mock-service"
version = "0.0.1"
edition = "2024"

[dependencies]
mimalloc = { version = "0.1.48", features = ["extended"] }
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros", "fs"] }
axum = "0.8.7"

[profile.release]
opt-level = "z"
debug = false
strip = true
lto = true
codegen-units = 1
